# dpd-db

./: .clinerules  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  FIRST_TIME_USER_IMPROVEMENTS.md  Justfile  Makefile  README.md  create-dpd-db.py  dpd-db-tools.py  dpd-db.code-workspace  dpd_cli.py  dpd_cli2.py  exporter.code-workspace  go.mod  go.sum  justfile  makedb.sh  makedict.sh  migration .md  mkdocs.yaml  newsletter_apple_dict.md  nohup.out  profiler.prof  pyproject.toml  requirements.txt  sandhi.sh  setup.cfg
.gemini/: settings.json
.opencode/: package.json
.zed/: launch.json
archive/: README.md
audio/: README.md  db_create.py  db_release_download.py  db_release_upload.py  index_release_download.py
backup_tsv/: PaliRoot.tsv  README.md  Russian.tsv  SBS.tsv  dpd_roots.tsv  paliroot.tsv  russian.tsv
bash/: README.md  anki_updater.sh  build_and_make_all.sh  build_db.sh  dpd.sh  generate_components.sh  generating_components.sh  initial_setup_run_once.sh  makedict.sh  sandhi_zip_for_cloud.sh  update_db.sh
bold_defintions/: extract_bold_definitions.py  functions.py  search_bold_definitions.py  update_bold_defintions_db.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
csvs/: roots.csv
db/: README.md  backup_watcher.sh  data_guide.md  db_from_tsv.py  db_helpers.py  db_to_tsv.py  dpd_db_from_csv.py  get_db_session.py  models.py
db_tests/: README.md  add_compound_type.tsv  add_family_compound_and_idiom.py  add_family_compound_taddhita.py  add_phonetic_changes.tsv  add_phonetic_changes_vowels.py  add_phonetic_changes_vowels.tsv  add_phonetic_variants.py  add_synonym_variant.py  add_word_family_exceptions  archived_tests.tsv  db_tests_columns.tsv  db_tests_gui.py  db_tests_manager.py  db_tests_relationships.py  helpers.py  old_tests_DELETE.py  test_allowable_characters.py  test_antonyms.py  test_bahubbihis.json  test_bahubbihis.py  test_bold.json  test_bold_example_inflections.py  test_deconstructor_combine_db_and_manual_corrections.py  test_digu.json  test_digu.py  test_example_dupes.py  test_family_compounds.py  test_gram_in_last_position.py  test_hyphenations.json  test_hyphenations.py  test_hyphenations.txt  test_idioms.py  test_maha_compounds.py  test_maha_exceptions.json  test_neg_compound_exceptions.json  test_neg_compounds.py  test_pali_1_2_difefrence.py  test_sukha_dukkha_finder.json  test_sukha_dukkha_finder.py  (+2 more)
db_tests_gui/: README.md  add_antonyms.py  add_antonyms_sync.py  add_antonyms_sync_dict.json  add_family_compound_neg.py  add_family_compound_su_dur.py  add_hyphenations.json  add_hyphenations.py  internal_tests.py  main.py
docs/: DPD Add Words.xlsx  README.md  abbreviations.md  build_db.md  changelog.md  compounds.ods  compounds.tsv  compounds.tsv.csv  contact.md  contributing.md  dpd inflection lookup.odg  dpd.quotes  dpd.txt  dpd_headwords_table.md  index.md  license.md  lookup_system.py  newsletters.md  other_dicts.md  palifix.txt  project_folder_structure.md  release checklist.md  roots.ods  roots_deleted.tsv  rss.xml  rus_collaboration.md  style_guide_for_dpd_entries.md  thanks.md  tipitaka_source_files.md  tpr inflection lookup.odg  use_db.md  users_say.md  velthuis.csv
dpd/: db_helpers.py  gui.py  models.py
dps/: DPD-ex-insert.py  README.md  comparing_dpd_dps.py  errors  errors deva  exceptions_dict  relationship.md  sbs-index.csv  sbs_index.csv
ebook/: README.md  ebook_exporter.py
exporter/: README.md  data_keeper.py  deconstructor_exporter.py  export_dpd.py  export_epd.py  export_help.py  export_roots.py  export_sandhi.py  export_variant_spelling.py  exporter.py  helpers.py  html_components.py  i2html.py  jinja2_env.py  mdict_exporter.py  pyglossary_exporter.py  template_validator.py  tpr_exporter.py
exporter_ru/: README.md  export_dpd_ru.py  export_help.py  export_roots_ru.py  export_rpd.py  export_variant_spelling.py  exporter_ru.py  helpers.py  mdict_exporter_ru.py
families/: README.md  compound_family.py  idioms.py  root_family.py  root_info.py  root_matrix.py  sets.py  word_family.py
family_compound/: compound_family.py
family_root/: root_family.py  root_matrix.py
family_set/: sets.py
family_word/: word_family.py
frequency/: README.md  corpus_counter.py  cst4_xml_to_txt.py  ebt_calculation.py  frequency.html  helpers.py  map.csv  mapmaker.py
go_modules/: README.md  go_experience.md
grammar_dict/: README.md  get_paths.py  grammar_dict.py  header.html
gui/: PySimpleGUI.py  README.md  additions  additions.tsv  completion_combo.py  corrections.py  corrections.tsv  corrections_check_feedback.py  db_helpers.py  delated_words_history.tsv  devatab.py  dropdown.py  fuctions_show_fields.py  functions.py  functions_daily_record.py  functions_db.py  functions_db_dps.py  functions_dps.py  functions_tests.py  functions_tests_dps.py  gui.py  gui_deva.py  gui_deva_notes  gui_main.py  helpers.py  i2html.py  major_change_meaning_history.tsv  pass2.py  pass2_checked.json  sandhi_contraction.tsv  sbs-index.csv  sbs_ru_tab.py  tab_add_next_word.py  tab_add_word.py  tab_db_tests.py  tab_dps_tests.py  tab_edit_dpd.py  tab_edit_dps.py  tab_fix_sandhi.py  tab_ru_sbs.py  (+2 more)
gui2/: README.md  additions_manager.py  ai_search.py  ai_search_window.py  appbar_updater.py  bold_search_controller.py  bold_search_view.py  books.py  class_books.py  class_daily_log.py  class_database.py  class_dpd_fields.py  class_mixins.py  class_pass2_file_manager.py  class_paths.py  class_spelling.py  class_tests.py  compound_type_tab_view.py  corrections_manager.py  daily_log.py  database.py  database_manager.py  def_dpd_fields.py  def_make_dpd_headword.py  dpd_fields.py  dpd_fields_classes.py  dpd_fields_commentary.py  dpd_fields_compound_construction.py  dpd_fields_examples.py  dpd_fields_family_set.py  dpd_fields_flags.py  dpd_fields_functions.py  dpd_fields_lists.py  dpd_fields_meaning.py  dpd_fields_notes.py  example_stash_manager.py  filter_component.py  filter_logic.py  filter_presets_manager.py  filter_tab_view.py  (+66 more)
icon/: README.md
identity/: README.md
(+4005 files in other folders)
