[project]
name = "dpd-db"
version = "v0.2"
description = ""
authors = [{ name = "Bodhirasa", email = "digitalpalidictionary@gmail.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "SQLAlchemy~=2.0.22",
    "SQLAlchemy-Utils~=0.41.1",
    "tqdm>=4.64.1,<5",
    "rich>=13.3.1,<14",
    "pandas>=2.2.3",
    "openpyxl>=3.1.0,<4",
    "aksharamukha>=2.1.2,<3",
    "python-idzip>=0.3.9,<0.4",
    "mako>=1.2.4,<2",
    "markdown>=3.4.1,<4",
    "minify-html>=0.15.0",
    "pip>=23.0.1,<24",
    "pyspellchecker>=0.7.1,<0.8",
    "beautifulsoup4>=4.11.2,<5",
    "nltk>=3.8.1,<4",
    "pyperclip>=1.8.2,<2",
    "css-html-js-minify>=2.5.5,<3",
    "html2text>=2020.1.16,<2021",
    "openai>=1.54.4,<2",
    "python-docx>=0.8.11,<0.9",
    "timeout-decorator>=0.5.0,<0.6",
    "psutil>=5.9.6,<6",
    "anki>=23.10.1,<24",
    "jinja2>=3.1.2,<4",
    "flask>=3.0.0,<4",
    "flask-sqlalchemy>=3.1.1,<4",
    "tomlkit>=0.12.3,<0.13",
    "pyglossary>=4.6.1,<5",
    "fastapi>=0.110.2,<0.111",
    "uvicorn>=0.30.1,<0.31",
    "unidecode>=1.3.8,<2",
    "weasyprint~=62.3",
    "pandoc~=2.3",
    "gitpython>=3.1.43,<4",
    "numpy>=2.2.3",
    "dbfread>=2.0.7,<3",
    "dbf>=0.99.9,<0.100",
    "typst==0.12.0",
    "httpcore>=1.0.7,<2",
    "hatchling>=1.27.0",
    "ruff>=0.9.7",
]

[dependency-groups]
dev = [
    "black>=23.1.0,<24",
    "flake8>=6.0.0,<7",
    "bandit>=1.7.5,<2",
    "pylint>=2.17.0,<3",
    "pylama>=8.4.1,<9",
    "icecream>=2.1.3,<3",
    "pytest>=7.4.3,<8",
]

[tool.hatch.build.targets.sdist]
include = ["db"]

[tool.hatch.build.targets.wheel]
include = ["db"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.ruff]
ignore = ["E501"]
target-version = "py312"
exclude = ["gui/PySimpleGUI.py", "tools/writemdict/*"]

