[project]
name = "dpd-db"
version = "v0.2"
description = ""
authors = [{ name = "Bodhirasa", email = "digitalpalidictionary@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "SQLAlchemy>=2.0.22",
    "rich>=13.3.1",
    "pandas>=2.2.3",
    "openpyxl>=3.1.0",
    "aksharamukha>=2.1.2",
    "python-idzip>=0.3.9",
    "mako>=1.2.4",
    "minify-html>=0.15.0",
    "pip>=23.0.1",
    "pyspellchecker>=0.7.1",
    "beautifulsoup4>=4.11.2",
    "pyperclip>=1.8.2",
    "openai>=1.54.4",
    "timeout-decorator>=0.5.0",
    "psutil>=5.9.6",
    "anki>=23.10.1",
    "jinja2>=3.1.2",
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.1",
    "tomlkit>=0.12.3",
    "pyglossary>=4.6.1",
    "fastapi>=0.110.2",
    "uvicorn>=0.30.1",
    "unidecode>=1.3.8",
    "pandoc>=2.3",
    "gitpython>=3.1.43",
    "numpy>=2.2.3",
    "dbf>=0.99.9",
    "typst>=0.13.2",
    "ruff>=0.9.7",
    "pygithub>=2.6.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.9",
    "pyyaml>=6.0.2",
    "marimo>=0.12.4",
    "google-generativeai>=0.8.4",
    "gtts>=2.5.4",
    "snakeviz>=2.2.2",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.27.1",
    "natsort>=8.4.0",
    "indic-transliteration>=2.3.75",
]

[dependency-groups]
dev = [
    "black>=23.1.0",
    "flake8>=6.0.0",
    "bandit>=1.7.5",
    "pylint>=2.17.0",
    "pylama>=8.4.1",
    "icecream>=2.1.3",
    "pytest>=7.4.3",
    "flet[all]>=0.28.3",
    "deptry>=0.23.0",
    "modelcontextprotocol>=0.1.0",
    "mcp>=1.6.0",
    "elevenlabs>=1.57.0",
    "gtts>=2.5.4",
]

[tool.hatch.build.targets.sdist]
include = ["db"]

[tool.hatch.build.targets.wheel]
include = ["db"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.ruff]
ignore = ["E501"]
target-version = "py312"
exclude = ["gui/PySimpleGUI.py", "tools/writemdict/*"]
