[project]
name = "dpd-db"
version = "v0.2"
description = ""
authors = [{ name = "Bodhirasa", email = "digitalpalidictionary@gmail.com" }]
requires-python = ">=3.13,<3.14"
readme = "README.md"
dependencies = [
    "fastapi>=0.110.2",
    "uvicorn>=0.30.1",
    "jinja2>=3.1.2",
    "SQLAlchemy>=2.0.22",
    "aksharamukha>=2.1.2",
    "beautifulsoup4>=4.11.2",
    "rich>=13.3.1",
    "unidecode>=1.3.8",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psutil>=7.0.0",
    "natsort>=8.4.0",
    "requests>=2.32.3",
    "typst>=0.14.9",
    "filelock>=3.29.1",
]

[dependency-groups]
dev = [
    "icecream>=2.1.3",
    "pytest>=7.4.3",
    "deptry>=0.23.0",
    "pyright>=1.1.408",
    "pre-commit>=4.5.1",
    # starlette TestClient backend; no fastapi/starlette extra provides httpx2 (their extras pull old httpx)
    "httpx2>=2.3.0",
]
tools = [
    "pandas>=2.2.3",
    # pandas Excel engine for pd.read_excel/to_excel; bare not pandas[excel] (that pulls 5 unused engines)
    "openpyxl>=3.1.0",
    "python-idzip>=0.3.9",
    "minify-html>=0.16.4",
    "pyspellchecker>=0.7.1",
    "pyperclip>=1.8.2",
    "openai>=1.54.4",
    # anki 25.7+ ships protobuf-6 gencode; pin until anki resolves upstream
    "anki>=23.10.1,<25.3",
    "pyglossary>=4.6.1",
    "gitpython>=3.1.43",
    "numpy>=2.2.3",
    "pypdf>=5.0.0",
    "ruff>=0.9.7",
    "pygithub>=2.6.1",
    "markdown>=3.5",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.9",
    "pyyaml>=6.0.2",
    "google-genai>=1.0.0",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.27.1",
    "miniaudio>=1.61",
    "pathspec>=0.12.1",
    "flet[all]==0.28.3",
    "mcp>=1.6.0",
    "google-api-python-client>=2.167.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.3.0",
    "markdownify>=1.2.2",
    "pyicu>=2.16.2",
    "genanki>=0.13.1",
    "prompt-toolkit>=3.0.52",
]

[tool.hatch.build.targets.sdist]
include = ["db"]

[tool.hatch.build.targets.wheel]
include = ["db"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
exclude = ["gui2", "tools/writemdict", "tests", "archive", "tools/cst_source", "exporter/anki"]

[tool.ruff]
target-version = "py313"
exclude = ["archive", "tools/writemdict/*", "tools/cst_source"]
force-exclude = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E501"]
extend-select = ["PLW1514"]
preview = true
explicit-preview-rules = true

[tool.pytest.ini_options]
addopts = "--import-mode=importlib -m 'not slow'"
testpaths = ["tests"]
markers = [
    "slow: test parses large CST XML; deselected by default. Run with `-m slow`.",
]
